@@ -1,8 +1,8 @@
 #File automatically generated by Defects4J
-d4j.bug.id=60
-d4j.classes.modified=org.jsoup.parser.TokenQueue,org.jsoup.select.QueryParser
-d4j.classes.relevant=org.jsoup.helper.StringUtil,org.jsoup.helper.Validate,org.jsoup.parser.TokenQueue,org.jsoup.select.CombiningEvaluator,org.jsoup.select.Evaluator,org.jsoup.select.QueryParser,org.jsoup.select.Selector
+d4j.bug.id=61
+d4j.classes.modified=org.jsoup.nodes.Element
+d4j.classes.relevant=org.jsoup.helper.DataUtil,org.jsoup.helper.StringUtil,org.jsoup.helper.Validate,org.jsoup.Jsoup,org.jsoup.nodes.Attribute,org.jsoup.nodes.Attributes,org.jsoup.nodes.BooleanAttribute,org.jsoup.nodes.Comment,org.jsoup.nodes.DataNode,org.jsoup.nodes.Document,org.jsoup.nodes.DocumentType,org.jsoup.nodes.Element,org.jsoup.nodes.Entities,org.jsoup.nodes.FormElement,org.jsoup.nodes.Node,org.jsoup.nodes.TextNode,org.jsoup.nodes.XmlDeclaration,org.jsoup.parser.CharacterReader,org.jsoup.parser.HtmlTreeBuilder,org.jsoup.parser.HtmlTreeBuilderState,org.jsoup.parser.ParseErrorList,org.jsoup.parser.Parser,org.jsoup.parser.ParseSettings,org.jsoup.parser.Tag,org.jsoup.parser.Token,org.jsoup.parser.Tokeniser,org.jsoup.parser.TokeniserState,org.jsoup.parser.TokenQueue,org.jsoup.parser.TreeBuilder,org.jsoup.parser.XmlTreeBuilder,org.jsoup.select.Collector,org.jsoup.select.CombiningEvaluator,org.jsoup.select.Elements,org.jsoup.select.Evaluator,org.jsoup.select.NodeTraversor,org.jsoup.select.NodeVisitor,org.jsoup.select.QueryParser,org.jsoup.select.Selector,org.jsoup.SerializationException
 d4j.dir.src.classes=src/main/java
 d4j.dir.src.tests=src/test/java
 d4j.project.id=Jsoup
-d4j.tests.trigger=org.jsoup.select.QueryParserTest::testParsesSingleQuoteInContains,org.jsoup.select.QueryParserTest::exceptionOnUncloseAttribute
+d4j.tests.trigger=org.jsoup.select.ElementsTest::hasClassCaseInsensitive,org.jsoup.select.SelectorTest::testByClassCaseInsensitive
