@@ -65,7 +65,7 @@ public class Elements extends ArrayList<Element> {
     }
 
     /**
-     Checks if any of the matched elements have this attribute set.
+     Checks if any of the matched elements have this attribute defined.
      @param attributeKey attribute key
      @return true if any of the elements have the attribute; false if none do.
      */
@@ -75,6 +75,22 @@ public class Elements extends ArrayList<Element> {
                 return true;
         }
         return false;
+    }
+
+    /**
+     * Get the attribute value for each of the matched elements. If an element does not have this attribute, no value is
+     * included in the result set for that element.
+     * @param attributeKey the attribute name to return values for. You can add the {@code abs:} prefix to the key to
+     * get absolute URLs from relative URLs, e.g.: {@code doc.select("a").eachAttr("abs:href")} .
+     * @return a list of each element's attribute value for the attribute
+     */
+    public List<String> eachAttr(String attributeKey) {
+        List<String> attrs = new ArrayList<String>(size());
+        for (Element element : this) {
+            if (element.hasAttr(attributeKey))
+                attrs.add(element.attr(attributeKey));
+        }
+        return attrs;
     }
 
     /**
@@ -181,6 +197,7 @@ public class Elements extends ArrayList<Element> {
      * children, as the Element.text() method returns the combined text of a parent and all its children.
      * @return string of all text: unescaped and no HTML.
      * @see Element#text()
+     * @see #eachText()
      */
     public String text() {
         StringBuilder sb = new StringBuilder();
@@ -192,12 +209,34 @@ public class Elements extends ArrayList<Element> {
         return sb.toString();
     }
 
+    /**
+     Test if any matched Element has any text content, that is not just whitespace.
+     @return true if any element has non-blank text content.
+     @see Element#hasText()
+     */
     public boolean hasText() {
         for (Element element: this) {
             if (element.hasText())
                 return true;
         }
         return false;
+    }
+
+    /**
+     * Get the text content of each of the matched elements. If an element has no text, then it is not included in the
+     * result.
+     * @return A list of each matched element's text content.
+     * @see Element#text()
+     * @see Element#hasText()
+     * @see #text()
+     */
+    public List<String> eachText() {
+        ArrayList<String> texts = new ArrayList<String>(size());
+        for (Element el: this) {
+            if (el.hasText())
+                texts.add(el.text());
+        }
+        return texts;
     }
     
     /**
